@@ -1,5 +1,10 @@
 2008-03-30  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-security/ws-wpa-psk.c
+		- (ws_wpa_psk_new): fill WPA key
+
+2008-03-30  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-dialog.c
 		- (security_combo_init): fix item counting to determine default security
 			type
